WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133413
REGRESSION (WebKit2): space space to insert period doesn't work in web forms
https://bugs.webkit.org/show_bug.cgi?id=133413
Summary
REGRESSION (WebKit2): space space to insert period doesn't work in web forms
Enrica Casucci
Reported
2014-05-30 16:08:02 PDT
Any input field in Safari shows the problem, using the on-screen keyboard. <
rdar://problem/16948333
>
Attachments
Patch
(23.61 KB, patch)
2014-05-30 16:23 PDT
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch that fixes EWS
(23.55 KB, patch)
2014-05-30 16:39 PDT
,
Enrica Casucci
benjamin
: review+
benjamin
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-05-30 16:23:51 PDT
Created
attachment 232308
[details]
Patch
Enrica Casucci
Comment 2
2014-05-30 16:36:45 PDT
I've fixed the EWS failures.
Enrica Casucci
Comment 3
2014-05-30 16:39:08 PDT
Created
attachment 232310
[details]
Patch that fixes EWS
Benjamin Poulain
Comment 4
2014-05-30 16:45:28 PDT
Comment on
attachment 232310
[details]
Patch that fixes EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=232310&action=review
> Source/WebCore/editing/VisibleUnits.cpp:1819 > +// The elements in the returned vector are: > +// 0 - the character after the given position (if it exists) > +// 1 - the character before the given position (if it exists) > +// 2 - the character before the position prior to the given position (if it exists).
Let's make the return value a struct. That way you can name all the values, which is gonna be easier to understand at the call sites.
Enrica Casucci
Comment 5
2014-05-30 17:13:48 PDT
Landed the change that addresses Ben's comments. Committed revision 169500.
Darin Adler
Comment 6
2014-05-30 18:05:54 PDT
Comment on
attachment 232310
[details]
Patch that fixes EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=232310&action=review
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2488 > + const UChar noBreakSpace = 0x00A0;
CharacterNames.h already has this constant. Can’t we include that instead of adding a new declaration?
Enrica Casucci
Comment 7
2014-06-02 13:43:50 PDT
Removed unwanted changes. Committed revision 169543
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug